# culling_games

./: README.md
src/cg/cg/: Game.py
src/ponderada/: CMakeLists.txt  package.xml
src/ponderada/include/: explorer.h  get_map_client.h  graph_adj_matrix.h  map_graph.h  map_printer.h  move_client.h  path_finder.h  path_moves.h  reset_client.h  sensor_client.h
src/ponderada/src/: explorer.cpp  get_map_client.cpp  graph_adj_matrix.cpp  map_graph.cpp  map_printer.cpp  move_client.cpp  part1.cpp  part2.cpp  parte1.cpp  parte2.cpp  path_finder.cpp  path_moves.cpp  reset_client.cpp  sensor_client.cpp
